--- a/week2/day3/todo/gemfile
+++ b/week2/day3/todo/gemfile
@@ -1,6 +1,5 @@
 source "https://rubygems.org"
 
-gem "rspec"
 gem "sinatra"
 gem "sinatra-contrib"
-gem "pry"
+gem "imdb", :git => "https://github.com/nickborbe/imdb.git"
